Issue 30 - search - remove truncations in the search results

--- a/tsm/src/main/webapp/css/search.css
+++ b/tsm/src/main/webapp/css/search.css
@@ -24,7 +24,7 @@
   #tmp-logo {
     position:absolute;
     top:23px;
-    left:710px;
+    left:750px;
   }
 .mapedit #results {
   overflow-x:hidden; 
